# XPPBE

./: .gitattributes  .gitignore  Allclean  LICENSE  Main.ipynb  Main2d.ipynb  Main3d.ipynb  Main_XPINNS.ipynb  Main_spect.ipynb  PLAN.txt  PLAN_03-08  README.md  Test.ipynb  Test_Precond_2D.ipynb  Test_postprocessing.ipynb  Tests.ipynb  info.txt  notes.txt  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  python-tests.yaml
PDE_Solvers/NSE/: Main_1.py  Simulation_1.py
PDE_Solvers/PBE/: Main_X.py
PDE_Solvers/PBE_R/: Main_X_REG.py
PDE_Solvers/Poisson/: Main_1.py
classes/: Mesh.py  XPINN.py
classes/cartesian/: Mesh.py  PDE_Model.py  PINN.py  Postprocessing.py  Preconditioner.py  XPINN.py
classes/polar/: Mesh.py  PDE_Model.py  PINN.py
code/: Allclean  Allrun  Main.py  Main2.py  Main_BornIon.py  Main_BornIon_Reg.py  Main_Molecule.py  Simulation.py  TEST.PY  Test_mesh.py  run_simulations.bash
code/Analysis/: Postcode.ipynb  Solutions.ipynb
code/Mesh/: Charges_utils.py  Mesh.py  Mesh_utils.py  Molecule_Mesh.py  Solver_Mesh.py  TEST.ipynb
code/Model/: Equations.py  PDE_Model.py  PDE_Model_R1.py  PDE_Model_R2.py  PDE_Model_Reg.py  PDE_utils.py  Solutions_utils.py
code/Molecules/: Known_Dataset.ipynb  PBJcode.ipynb  Solutions.ipynb  create_known_dataset.py  create_known_dataset_solv.py  move_mol_pqr.py
code/NN/: NeuralNet.py  NeuralNet_Fourier.py  NeuralNet_Fourier_2.py  PINN.py  XPINN.py  XPINN_utils.py
code/Post/: Post_Template.ipynb  Postcode.ipynb  Postcode.py  Postprocessing.py  analytic.ipynb  post.ipynb  post_dev.ipynb  postprocessing.ipynb  postprocessing_X.ipynb  results.ipynb  results.xlsx
code/Simulation_list/: List.xlsx  S0.py  S1.py  S10.py  S11.py  S12.py  S13.py  S14.py  S15.py  S18.py  S19.py  S1_P_R.py  S2.py  S20.py  S22.py  S23.py  S25.py  S28.py  S2_P_R_E.py  S3.py  S30.py  S31.py  S32.py  S33.py  S34.py  S3_R.py  S4.py  S4_R_WA.py  S5.py  S5_R_FF.py  S6.py  S6_R_FF.py  S7.py  S7_R_FF_NK.py  S8.py  S8_P_R_E_FF.py  S9.py  S99.py  S_H1_N2_B0_WXX.py
code/simulations_list/: A1.py  A2.py  B1.py  B2.py  List.xlsx  M1.py  M2.py  S29.py  S40.py  S41.py  S51.py  S52.py  S53.py  S54.py  S55.py  S56.py  S57.py  S58.py  S59.py  S60.py  S61.py  S78.py
code/tulio/: pscp_sims.bash
notebooks/analysis/: Known_Dataset.ipynb  PBJ.ipynb  Results.ipynb
notebooks/tutorials/: tutorial_parameters.yaml
papers/PINN_PB_paper/: README.md  main.py
results/: Results_Errors.xlsx  plots.ipynb  plots_arch_test.ipynb
results_main/reg_30-07/: results.xlsx
results_main/reg_31-07/: results.xlsx
results_main/reg_31-07-A/: results.xlsx
results_main/reg_31-07-B/: results.xlsx
results_main/reg_31-07-C/: results.xlsx
results_main/reg_31-07-D/: results.xlsx
results_tulio/results_sim_FCNN_10/: results.xlsx
results_tulio/results_sim_FCNN_1035npl/: results.xlsx
results_tulio/results_sim_FCNN_11/: results.xlsx
results_tulio/results_sim_FCNN_1135npl/: results.xlsx
results_tulio/results_sim_FCNN_3/: results.xlsx
results_tulio/results_sim_FCNN_335npl/: results.xlsx
results_tulio/results_sim_FCNN_4/: results.xlsx
results_tulio/results_sim_FCNN_435npl/: results.xlsx
results_tulio/results_sim_FCNN_5/: results.xlsx
results_tulio/results_sim_FCNN_535npl/: results.xlsx
results_tulio/results_sim_FCNN_6/: results.xlsx
results_tulio/results_sim_FCNN_635npl/: results.xlsx
results_tulio/results_sim_FCNN_7/: results.xlsx
results_tulio/results_sim_FCNN_735npl/: results.xlsx
results_tulio/results_sim_FCNN_8/: results.xlsx
results_tulio/results_sim_FCNN_835npl/: results.xlsx
results_tulio/results_sim_FCNN_9/: results.xlsx
results_tulio/results_sim_FCNN_935npl/: results.xlsx
results_zeb/PB/: plot.ipynb
saved_codes/: Main3d copy.py  Main3d.py  Main_code.ipynb  PDE_Model_X.py
test/: batch.py  pytorch.py
tests/: analytic.ipynb  bempp.ipynb  bemppx.ipynb  logger.py  logger2.py  sim.py  sims.bash  test_arg.yaml  test_fun.py  test_methanol.yaml  test_xppbe.py
tutorials/: tutorial.ipynb  tutorial.yaml
utils/: Mesh.py  NeuralNet.py  PDE_Model.py  PINN.py  Postprocessing.py  Preconditioner.py
utils2d/: NeuralNet.py  XPINN.py
utils3d/: Allclean  Main.py  Main3d copy.py  Main3d.ipynb  Main3d.py  Main3d_X.py  Main_1.py  Main_X.py  Main_X_REG.py  NeuralNet.py  PDE_Model BEMP.py  PDE_Model.py  PINN.py  Postprocessing.py  Simulation.py  Simulation_1.py  Simulation_X.py  TEST.py  XPINN.py  analytic.ipynb  falta.txt  missing.txt  postprocessing_X.ipynb  postprocessing_X_REG.ipynb  run_simulations.bash
utils_spectr/: Mesh.py  PDE_Model.py  PINN.py  missing.txt
xppbe/: Allclean  Allrun  Main.py  Main.yaml  Scripts  Simulation.py  Simulation.yaml  __init__.py  sims.bash
xppbe/NN/: PINN.py  (+5 more)
(+323 files in other folders)
