[project]
name = "xppbe"
version = "1.0.0"
description = "Physics Informed Neural Network for Poisson-Boltzmann equation"
authors = [{name = "martinachondo", email = "martin.achondom@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "Deep learning",
    "Neural networks",
    "Physics-informed neural networks",
    "Scientific computing",
    "Scientific machine learning",
    "Poisson-Boltzmann equation",
    "Macromolecules in polarizable media"
]
requires-python = "==3.8.18"
dependencies = [
    "numpy==1.21.0",
    "tensorflow==2.10.0",
    "scipy==1.10.1",
    "trimesh==3.23.5",
    "pygamer==2.0.7",
    "matplotlib==3.6.1",
    "plotly==5.14.1",
    "pandas==2.0.2",
    "tqdm==4.64.1",
    "ipykernel==6.16.0",
    "pyyaml==6.0.1",
    "yq==3.4.3"
]

[project.optional-dependencies]
pbe-standard = [
    "rtree==1.0.1",
    "numba==0.57.0",
    "meshio==5.3.4",
    "gmsh==4.11.1",
    "bempp-cl==0.3.0"
]
pdb-molecule = [
    "pdb2pqr==3.6.2",
]
pbj = [
    "pbj@git+https://github.com/bem4solvation/pbj"
]
model-visualization = [
    "pydotplus==2.0.2",
    "graphviz@git+https://gitlab.com/graphviz/graphviz/"
]
data-processing = [
    "xlsxwriter==3.1.9"
]

[tool.setuptools]
packages = ["xppbe"]

[project.urls]
repository = "https://github.com/MartinAchondo/XPPBE"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"