[project]
name = "xppbe"
version = "1.0.0"
description = "Physics Informed Neural Network for Poisson-Boltzmann equation"
authors = [{name = "martinachondo", email = "martin.achondom@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "Deep learning",
    "Neural networks",
    "Physics-informed neural networks",
    "Scientific computing",
    "Scientific machine learning",
    "Poisson-Boltzmann equation",
    "Macromolecules in polarizable media"
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy==1.23.5",
    "tensorflow==2.10.0",
    "scipy==1.13.1",
    "trimesh==3.23.5",
    "pygamer==2.0.7",
    "matplotlib==3.5.1",
    "plotly==5.7.0",
    "pandas==2.2.0",
    "tqdm==4.64.1",
    "ipykernel==6.22.0",
    "pyyaml==6.0.1",
    "yq==3.4.3"
]

[project.optional-dependencies]
pbe-standard = [
    "rtree==1.0.1",
    "numba==0.59.1",
    "meshio==5.3.4",
    "gmsh==4.9.5",
    "bempp-cl==0.3.0"
]
pdb-molecule = [
    "pdb2pqr==3.4.1",
]
pbj = [
    "pbj@git+https://github.com/bem4solvation/pbj@main#d99f3b4"
]
apbs = [
    "apbs@git+https://github.com/Electrostatics/apbs",
    "griddata==0.1.0"
]
model-visualization = [
    "pydotplus==2.0.2"
]
data-processing = [
    "xlsxwriter==3.1.9"
]

[tool.setuptools.packages.find]
include = ["xppbe*"]

[tool.setuptools.package-data]
xppbe = ["*yaml","Mesh/Mesh_softwares/**/*","Molecules/**/*.pqr","Model/**/*.in","Post/*.ipynb"]

[project.urls]
repository = "https://github.com/MartinAchondo/XPPBE"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
